@@ -14,10 +14,12 @@ export(integer.coded)
 export(interleave)
 export(km.plot)
 export(lhs)
+export(read.header)
 export(revd)
 export(rnorm.bivariate)
 export(scientific.notation)
 export(source.directory)
+export(str.cat)
 export(stripboxplot)
 export(truncate.survival)
 export(varied.rep)
