@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/datestamp_filename.R
+% Please edit documentation in R/datestamp.filename.R
 \name{datestamp.filename}
 \alias{datestamp.filename}
 \title{Generate date-stamped filename}
