@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/head_cat.R
+% Please edit documentation in R/head.cat.R
 \name{head.cat}
 \alias{head.cat}
 \title{Print head of an arbitrary number of objects.}
