@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/integer_coded.R
+% Please edit documentation in R/integer.coded.R
 \name{integer.coded}
 \alias{integer.coded}
 \title{Integer code a vector}
