@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/scientific_notation.R
+% Please edit documentation in R/scientific.notation.R
 \name{scientific.notation}
 \alias{scientific.notation}
 \title{scientific.notation}
