@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/str_cat.R
+% Please edit documentation in R/str.cat.R
 \name{str.cat}
 \alias{str.cat}
 \title{Display structure of an arbitrary number of objects.}
