@@ -1,3 +1,7 @@
+hedgehog v0.1.4                         2018-01-21
+==================================================
+- added read.header function
+
 hedgehog v0.1.3                         2018-01-17
 ==================================================
 - variable point colours in stripboxplot
